test/invalid-semantic/56334_typeCheckError/typeCheckError.agu
-- Author: fc56334, Goncalo Lopes

let x : Int = "2"